update bootstrap demo

--- a/NG-Wakanda-Pack/WebFolder/demos/bootstrap/index.html
+++ b/NG-Wakanda-Pack/WebFolder/demos/bootstrap/index.html
@@ -4,9 +4,11 @@
   <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <title>Angular-Wakanda - Bootstrap</title>
     <meta name="viewport" content="width=device-width">
-    <link rel="stylesheet" href="/libs/bootstrap.min.css">
+
+    <title>Angular-Wakanda - Bootstrap</title>
+
+    <link rel="stylesheet" href="/bower_components/bootstrap/dist/css/bootstrap.min.css">
     <link rel="stylesheet" href="./styles.css">
   </head>
 
@@ -27,13 +29,13 @@
             <p>All <span class="badge">{{countries.$totalCount}}</span></p>
             <div class="input-group">
               <span class="input-group-btn"><button class="btn btn-default" type="button" disabled>Filter</button></span>
-              <input type="text" class="form-control" ng-model="filter.Country" ng-change="setFilter('Country')">
+              <input type="text" class="form-control" ng-model="countries._nameFilter" ng-change="setFilters('countries', 'Country', 'name')">
             </div>
           </div>
           <table class="table table-striped table-hover">
             <tbody>
-              <tr ng-repeat="country in countries" class="{{country.selected && 'info'}}">
-                <td ng-click="switchCurrentEntity('Country', country)">{{country.name}}</td>
+              <tr ng-repeat="c in countries" class="{{(c === country) && 'info'}}">
+                <td ng-click="setCurrent('country', c)">{{c.name}}</td>
               </tr>
             <tbody>
           </table>
@@ -46,17 +48,17 @@
             <h2>Companies</h2>
           </div>
           <div class="panel-body">
-            <p>From <strong>{{current.Country.name}}</strong> <span class="badge">{{companies.$totalCount}}</span></p>
+            <p>From <strong>{{country.name}}</strong> <span class="badge">{{country.companies.$totalCount}}</span></p>
             <div class="input-group">
               <span class="input-group-btn"><button class="btn btn-default" type="button" disabled>Filter</button></span>
-              <input type="text" class="form-control" ng-model="filter.Company" ng-change="setFilter('Company')">
+              <input type="text" class="form-control" ng-model="country.companies._nameFilter" ng-change="setFilters('companies', 'Company', 'name', 'country', country.ID)">
             </div>
           </div>
           <div>
             <table class="table table-striped table-hover">
-              <tbody when-scrolled="companies.$more()">
-                <tr ng-repeat="company in companies" class="{{company.selected && 'info'}}">
-                  <td ng-click="switchCurrentEntity('Company', company)">{{company.name}}</td>
+              <tbody when-scrolled="country.companies.$more()">
+                <tr ng-repeat="c in country.companies" class="{{c === company && 'info'}}">
+                  <td ng-click="setCurrent('company', c)">{{c.name}}</td>
                 </tr>
               <tbody>
             </table>
@@ -70,17 +72,17 @@
             <h2>Employees</h2>
           </div>
           <div  class="panel-body">
-            <p>From <strong>{{current.Company.name}}</strong> <span class="badge">{{employees.$totalCount}}</span></p>
+            <p>From <strong>{{company.name}}</strong> <span class="badge">{{company.employees.$totalCount}}</span></p>
             <div class="input-group">
               <span class="input-group-btn"><button class="btn btn-default" type="button" disabled>Filter</button></span>
-              <input type="text" class="form-control" ng-model="filter.Employee" ng-change="setFilter('Employee')">
+              <input type="text" class="form-control" ng-model="company.employees._nameFilter" ng-change="setFilters('employees', 'Employee', 'fullName', 'company', company.ID)">
             </div>
           </div>
           <div>
             <table class="table table-striped table-hover">
-              <tbody when-scrolled="employees.$more()">
-                <tr ng-repeat="employee in employees" class="{{employee.selected && 'info'}}">
-                  <td ng-click="switchCurrentEntity('Employee', employee)">{{employee.fullName}}</td>
+              <tbody when-scrolled="company.employees.$more()">
+                <tr ng-repeat="e in company.employees" class="{{e === employee && 'info'}}">
+                  <td ng-click="setCurrent('employee', e)">{{e.fullName}}</td>
                 </tr>
               <tbody>
             </table>
@@ -93,26 +95,24 @@
           <div  class="panel-heading">
             <h2>Employee Details</h2>
           </div>
-          <div  class="panel-body">
-            <p>From <strong>{{current.Employee.fullName}}</strong></p>
-            <p><img ng-src="{{current.Employee.photo.src}}" class="img-thumbnail"></p>
-            <p><strong>First Name</strong>: {{current.Employee.firstName}}</p>
-            <p><strong>Last Name</strong>: {{current.Employee.lastName}}</p>
-            <p><strong>Title</strong>: {{current.Employee.title}}</p>
-            <p><strong>Salary</strong>: {{current.Employee.salary}}</p>
-            <p><strong>Gender</strong>: {{current.Employee.gender}}</p>
-            <p><strong>Age</strong>: {{current.Employee.age}}</p>
+          <div  class="panel-body" ng-show="employee">
+            <p><strong>{{employee.fullName}}</strong></p>
+            <p><img ng-src="{{employee.photo.src}}" class="img-thumbnail"></p>
+            <p><strong>Title</strong>: {{employee.title}}</p>
+            <p><strong>Salary</strong>: {{employee.salary}}</p>
+            <p><strong>Gender</strong>: {{employee.gender}}</p>
+            <p><strong>Age</strong>: {{employee.age}}</p>
           </div>
         </section>
       </div>
 
     </div><!--main-->
 
-    <script src="/libs/jquery-2.1.0.min.js"></script>
-    <script src="/libs/bootstrap.min.js"></script>
-    <script src="/libs/angular.min.js"></script>
-    <script src="/libs/angular-wakanda.min.js"></script>
-    <script src="/libs/ng-infinite-scroll.min.js"></script>
+    <script src="/bower_components/jquery/dist/jquery.min.js"></script>
+    <script src="/bower_components/bootstrap/dist/js/bootstrap.min.js"></script>
+
+    <script src="/bower_components/angular/angular.min.js"></script>
+    <script src="/bower_components/angular-wakanda/angular-wakanda.min.js"></script>
     <script src="./app.js"></script>
   </body>
 </html>
