update links in index.html

--- a/NG-Wakanda-Pack/WebFolder/index.html
+++ b/NG-Wakanda-Pack/WebFolder/index.html
@@ -2,29 +2,26 @@
 <html>
 <head>
   <meta charset="utf-8">
-
   <title>NG-Wakanda-Pack</title>
-
-  <link rel="stylesheet" href="/bower_components/jquery-ui/themes/blitzer/jquery-ui.min.css" />
-  <link rel="stylesheet" href="index.css" />
+  <link rel="stylesheet" href="/bower_components/jquery-ui/themes/blitzer/jquery-ui.min.css" >
+  <link rel="stylesheet" href="index.css">
 </head>
 <body>
   <h1>
       NG-Wakanda-Pack
   </h1>
-
   <div style="font-size: 18px">
     <a href="http://angularjs.org/" target="_blank"><img alt="AngularJS" src="images/angular-shield.png" style="vertical-align: middle;float:left; margin:0 1em 1em 0; width: 197px; height: 207px;border:none" /></a>
     <a href="http://wakanda.org/" target="_blank"><img alt="Wakanda Server" src="images/wakandadb.png" style="vertical-align: middle;float:right; margin:0 1em 1em 0; width: 180px; height: 180px;border:none" /></a>
     <p>&nbsp;</p>
     <p style="font-weight:bold;">Build <a href="http://angularjs.org/" target="_blank">AngularJS</a> expressive interfaces linked to your REST provided <a href="http://angularjs.org/" target="_blank">Wakanda</a> Application Model.</p>
     <p>This solution pack contain several demo pages to learn how to use <strong><a href="http://wakanda.org/angular">angular-wakanda</a></strong></p>
-    <p>All this pack and its running examples are available from this Github repository: <a href="https://github.com/AMorgaut/NG-Wakanda-Pack" target="_blank">NG-Wakanda-Pack</a></p>
+    <p>All this pack and its running examples are available from this Github repository: <a href="https://github.com/Wakanda/NG-Wakanda-Pack" target="_blank">NG-Wakanda-Pack</a></p>
   </div>
 
   <hr style="clear: left;">
 
-  <a href="https://github.com/AMorgaut/NG-Wakanda-Pack"><img style="position: absolute; top: 0; right: 0; border: 0;" src="https://github-camo.global.ssl.fastly.net/365986a132ccd6a44c23a9169022c0b5c890c387/68747470733a2f2f73332e616d617a6f6e6177732e636f6d2f6769746875622f726962626f6e732f666f726b6d655f72696768745f7265645f6161303030302e706e67" alt="Fork me on GitHub" data-canonical-src="https://s3.amazonaws.com/github/ribbons/forkme_right_red_aa0000.png"></a>
+  <a href="https://github.com/Wakanda/NG-Wakanda-Pack"><img style="position: absolute; top: 0; right: 0; border: 0;" src="https://github-camo.global.ssl.fastly.net/365986a132ccd6a44c23a9169022c0b5c890c387/68747470733a2f2f73332e616d617a6f6e6177732e636f6d2f6769746875622f726962626f6e732f666f726b6d655f72696768745f7265645f6161303030302e706e67" alt="Fork me on GitHub" data-canonical-src="https://s3.amazonaws.com/github/ribbons/forkme_right_red_aa0000.png"></a>
 
   <section>
     <table><tbody><tr>
@@ -34,14 +31,14 @@
 				  <a href="http://bower.io/" target="_blank"><img alt="bower" src="images/bower%20logo.gif" style="float:left; margin:0 1em 1em 0; width: 80px; height: 80px;border:none" /></a>
           Thanks to <a href="http://bower.io/" target="_blank">Bower</a>, Wakanda is very easy to install in by command line,
           directly or via your own <a href="http://bower.io/" target="_blank"><code>bowser.json</code></a> file
-          <script src="http://gist-it.appspot.com/github/AMorgaut/NG-Wakanda-Pack/blob/master/NG-Wakanda-Pack/WebFolder/tutorial/install.sh?footer=minimal"></script>
+          <script src="http://gist-it.appspot.com/github/Wakanda/NG-Wakanda-Pack/blob/master/NG-Wakanda-Pack/WebFolder/tutorial/install.sh?footer=minimal"></script>
         </p>
         <p>
           If you want to install it manually, <strong>angular-wakanda</strong> only requires to include
-          <a href="https://github.com/Wakanda/bower-angular-wakanda/raw/master/angular-wakanda.min.js" target="_blank">angular-wankanda-min.js</a> 
+          <a href="https://github.com/Wakanda/bower-angular-wakanda/raw/master/angular-wakanda.min.js" target="_blank">angular-wankada-min.js</a> 
           and only has <a href="https://github.com/angular/bower-angular/raw/master/angular.min.js" target="_blank">angular.min.js</a> for dependency.
         </p>
-        <script src="http://gist-it.appspot.com/github/AMorgaut/NG-Wakanda-Pack/blob/master/NG-Wakanda-Pack/WebFolder/tutorial/step1.html?slice=7:8&footer=minimal"></script>
+        <script src="http://gist-it.appspot.com/github/Wakanda/NG-Wakanda-Pack/blob/master/NG-Wakanda-Pack/WebFolder/tutorial/step1.html?slice=7:8&footer=minimal"></script>
       </td>
       <td>
         <div class="tabs">
@@ -54,10 +51,10 @@
             <iframe src="tutorial/step1.html"></iframe>
           </div>
   				<div id="step1-JS">
-            <script src="http://gist-it.appspot.com/github/AMorgaut/NG-Wakanda-Pack/blob/master/NG-Wakanda-Pack/WebFolder/tutorial/scripts/step1.js?footer=minimal"></script>
+            <script src="http://gist-it.appspot.com/github/Wakanda/NG-Wakanda-Pack/blob/master/NG-Wakanda-Pack/WebFolder/tutorial/scripts/step1.js?footer=minimal"></script>
           </div>
 		  		<div id="step1-HTML">
-            <script src="http://gist-it.appspot.com/github/AMorgaut/NG-Wakanda-Pack/blob/master/NG-Wakanda-Pack/WebFolder/tutorial/step1.html?footer=minimal"></script>
+            <script src="http://gist-it.appspot.com/github/Wakanda/NG-Wakanda-Pack/blob/master/NG-Wakanda-Pack/WebFolder/tutorial/step1.html?footer=minimal"></script>
           </div>
         </div>
       </td>
@@ -84,10 +81,10 @@
             <iframe src="tutorial/step2.html"></iframe>
           </div>
   				<div id="step2-JS">
-            <script src="http://gist-it.appspot.com/github/AMorgaut/NG-Wakanda-Pack/blob/master/NG-Wakanda-Pack/WebFolder/tutorial/scripts/step2.js?footer=minimal"></script>
+            <script src="http://gist-it.appspot.com/github/Wakanda/NG-Wakanda-Pack/blob/master/NG-Wakanda-Pack/WebFolder/tutorial/scripts/step2.js?footer=minimal"></script>
           </div>
 		  		<div id="step2-HTML">
-            <script src="http://gist-it.appspot.com/github/AMorgaut/NG-Wakanda-Pack/blob/master/NG-Wakanda-Pack/WebFolder/tutorial/step2.html?footer=minimal"></script>
+            <script src="http://gist-it.appspot.com/github/Wakanda/NG-Wakanda-Pack/blob/master/NG-Wakanda-Pack/WebFolder/tutorial/step2.html?footer=minimal"></script>
           </div>
         </div>
       </td>
@@ -100,7 +97,7 @@
         <h2>3 - Get your Data in One line</h2>
         <p><a href="http://wakanda.org/angular" target="_blank">angular-wakanda</a> lets you have all your Wakanda Model usable directly from Angular based Web Application interfaces.</p>
         <p>Once initialized, integrating your defined Business JS Objects into your angular scopes is as simple as this <strong>$find()</strong> method.</p>
-        <script src="http://gist-it.appspot.com/github/AMorgaut/NG-Wakanda-Pack/blob/master/NG-Wakanda-Pack/WebFolder/tutorial/scripts/step3.js?slice=10:10&footer=minimal"></script>
+        <script src="http://gist-it.appspot.com/github/Wakanda/NG-Wakanda-Pack/blob/master/NG-Wakanda-Pack/WebFolder/tutorial/scripts/step3.js?slice=10:10&footer=minimal"></script>
       </td>
       <td>
         <div class="tabs">
@@ -114,13 +111,13 @@
             <iframe src="tutorial/step3.html"></iframe>
           </div>
   				<div id="step3-JS">
-            <script src="http://gist-it.appspot.com/github/AMorgaut/NG-Wakanda-Pack/blob/master/NG-Wakanda-Pack/WebFolder/tutorial/scripts/step3.js?footer=minimal"></script>
+            <script src="http://gist-it.appspot.com/github/Wakanda/NG-Wakanda-Pack/blob/master/NG-Wakanda-Pack/WebFolder/tutorial/scripts/step3.js?footer=minimal"></script>
           </div>
 		  		<div id="step3-HTML">
-            <script src="http://gist-it.appspot.com/github/AMorgaut/NG-Wakanda-Pack/blob/master/NG-Wakanda-Pack/WebFolder/tutorial/step3.html?footer=minimal"></script>
+            <script src="http://gist-it.appspot.com/github/Wakanda/NG-Wakanda-Pack/blob/master/NG-Wakanda-Pack/WebFolder/tutorial/step3.html?footer=minimal"></script>
           </div>
   				<div id="step3-Country">
-            <script src="http://gist-it.appspot.com/github/AMorgaut/NG-Wakanda-Pack/blob/master/NG-Wakanda-Pack/Modules/Model/Country.js?footer=minimal"></script>
+            <script src="http://gist-it.appspot.com/github/Wakanda/NG-Wakanda-Pack/blob/master/NG-Wakanda-Pack/Modules/Model/Country.js?footer=minimal"></script>
           </div>
         </div>
       </td>
@@ -134,7 +131,7 @@
         <p>No need of manual paging or manual cache optimization...</p>
         <p>angular-wakanda take advatange of the wakanda protocol native entityset cache to fetch big collection pages.</p>
         <p>You can either use the <strong><code>$more()</code></strong> method for <a href="http://jsfiddle.net/vojtajina/U7Bz9/" target="_blank">infinite scroll</a> or the classic <strong><code>$prevPage()</code></strong> / <strong><code>$gotoPage()</code></strong> / <strong><code>$nextPage()</code></strong> methods on dedicated buttons</p>
-        <script src="http://gist-it.appspot.com/github/AMorgaut/NG-Wakanda-Pack/blob/master/NG-Wakanda-Pack/WebFolder/tutorial/step4.html?slice=27:31&footer=minimal"></script>
+        <script src="http://gist-it.appspot.com/github/Wakanda/NG-Wakanda-Pack/blob/master/NG-Wakanda-Pack/WebFolder/tutorial/step4.html?slice=27:31&footer=minimal"></script>
       </td>
       <td>
         <div class="tabs">
@@ -148,13 +145,13 @@
             <iframe src="tutorial/step4.html"></iframe>
           </div>
   				<div id="step4-JS">
-            <script src="http://gist-it.appspot.com/github/AMorgaut/NG-Wakanda-Pack/blob/master/NG-Wakanda-Pack/WebFolder/tutorial/scripts/step4.js?footer=minimal"></script>
+            <script src="http://gist-it.appspot.com/github/Wakanda/NG-Wakanda-Pack/blob/master/NG-Wakanda-Pack/WebFolder/tutorial/scripts/step4.js?footer=minimal"></script>
           </div>
 		  		<div id="step4-HTML">
-            <script src="http://gist-it.appspot.com/github/AMorgaut/NG-Wakanda-Pack/blob/master/NG-Wakanda-Pack/WebFolder/tutorial/step4.html?footer=minimal"></script>
+            <script src="http://gist-it.appspot.com/github/Wakanda/NG-Wakanda-Pack/blob/master/NG-Wakanda-Pack/WebFolder/tutorial/step4.html?footer=minimal"></script>
           </div>
   				<div id="step4-Company">
-            <script src="http://gist-it.appspot.com/github/AMorgaut/NG-Wakanda-Pack/blob/master/NG-Wakanda-Pack/Modules/Model/Company.js?footer=minimal"></script>
+            <script src="http://gist-it.appspot.com/github/Wakanda/NG-Wakanda-Pack/blob/master/NG-Wakanda-Pack/Modules/Model/Company.js?footer=minimal"></script>
           </div>
         </div>
       </td>
@@ -168,7 +165,7 @@
         <p>No joins, no foreign keys, no map-reduce...</p>
         <p>Get access to related data directly through your entity object properties</p>
         <p>All you have to do is to tell angular-wakanda when you want to load it locally with this related property <strong><code>$fetch()</code></strong> method</p>
-        <script src="http://gist-it.appspot.com/github/AMorgaut/NG-Wakanda-Pack/blob/master/NG-Wakanda-Pack/WebFolder/tutorial/scripts/step5-final.js?slice=15:16&footer=minimal"></script>
+        <script src="http://gist-it.appspot.com/github/Wakanda/NG-Wakanda-Pack/blob/master/NG-Wakanda-Pack/WebFolder/tutorial/scripts/step5-final.js?slice=15:16&footer=minimal"></script>
         <p>Thanks to the Wakanda <a href="http://doc.wakanda.org/Attributes.300-574626.en.html" target="_blank"><strong>alias attributes</strong></a>, this example shows the company manager fullname without even fetching the related Manager</p>
       </td>
       <td>
@@ -183,13 +180,13 @@
             <iframe src="tutorial/step5.html"></iframe>
           </div>
   				<div id="step5-JS">
-            <script src="http://gist-it.appspot.com/github/AMorgaut/NG-Wakanda-Pack/blob/master/NG-Wakanda-Pack/WebFolder/tutorial/scripts/step5-final.js?footer=minimal"></script>
+            <script src="http://gist-it.appspot.com/github/Wakanda/NG-Wakanda-Pack/blob/master/NG-Wakanda-Pack/WebFolder/tutorial/scripts/step5-final.js?footer=minimal"></script>
           </div>
 		  		<div id="step5-HTML">
-            <script src="http://gist-it.appspot.com/github/AMorgaut/NG-Wakanda-Pack/blob/master/NG-Wakanda-Pack/WebFolder/tutorial/step5.html?footer=minimal"></script>
+            <script src="http://gist-it.appspot.com/github/Wakanda/NG-Wakanda-Pack/blob/master/NG-Wakanda-Pack/WebFolder/tutorial/step5.html?footer=minimal"></script>
           </div>
   				<div id="step5-Company">
-            <script src="http://gist-it.appspot.com/github/AMorgaut/NG-Wakanda-Pack/blob/master/NG-Wakanda-Pack/Modules/Model/Company.js?footer=minimal"></script>
+            <script src="http://gist-it.appspot.com/github/Wakanda/NG-Wakanda-Pack/blob/master/NG-Wakanda-Pack/Modules/Model/Company.js?footer=minimal"></script>
           </div>
         </div>
       </td>
@@ -202,7 +199,7 @@
         <h2>6 - Modify your data</h2>
         <p>Each Wakanda DataClass provides a <strong><code>$create()</code></strong> method</p>
         <p>Each received Wakanda entities comes with its <strong><code>$save()</code></strong> and <strong><code>$remove()</code></strong> methods</p>
-        <script src="http://gist-it.appspot.com/github/AMorgaut/NG-Wakanda-Pack/blob/master/NG-Wakanda-Pack/WebFolder/tutorial/step6.html?slice=27:28&footer=minimal"></script>
+        <script src="http://gist-it.appspot.com/github/Wakanda/NG-Wakanda-Pack/blob/master/NG-Wakanda-Pack/WebFolder/tutorial/step6.html?slice=27:28&footer=minimal"></script>
       </td>
       <td>
         <div class="tabs">
@@ -218,19 +215,19 @@
             <iframe src="tutorial/step6.html"></iframe>
           </div>
   				<div id="step6-JS">
-            <script src="http://gist-it.appspot.com/github/AMorgaut/NG-Wakanda-Pack/blob/master/NG-Wakanda-Pack/WebFolder/tutorial/scripts/step6.js?footer=minimal"></script>
+            <script src="http://gist-it.appspot.com/github/Wakanda/NG-Wakanda-Pack/blob/master/NG-Wakanda-Pack/WebFolder/tutorial/scripts/step6.js?footer=minimal"></script>
           </div>
 		  		<div id="step6-HTML">
-            <script src="http://gist-it.appspot.com/github/AMorgaut/NG-Wakanda-Pack/blob/master/NG-Wakanda-Pack/WebFolder/tutorial/step6.html?footer=minimal"></script>
+            <script src="http://gist-it.appspot.com/github/Wakanda/NG-Wakanda-Pack/blob/master/NG-Wakanda-Pack/WebFolder/tutorial/step6.html?footer=minimal"></script>
           </div>
   				<div id="step6-Employee">
-            <script src="http://gist-it.appspot.com/github/AMorgaut/NG-Wakanda-Pack/blob/master/NG-Wakanda-Pack//Modules/Model/Employee/index.js?footer=minimal"></script>
+            <script src="http://gist-it.appspot.com/github/Wakanda/NG-Wakanda-Pack/blob/master/NG-Wakanda-Pack//Modules/Model/Employee/index.js?footer=minimal"></script>
           </div>
   				<div id="step6-fullName">
-            <script src="http://gist-it.appspot.com/github/AMorgaut/NG-Wakanda-Pack/blob/master/NG-Wakanda-Pack//Modules/Model/Employee/fullName.js?footer=minimal"></script>
+            <script src="http://gist-it.appspot.com/github/Wakanda/NG-Wakanda-Pack/blob/master/NG-Wakanda-Pack//Modules/Model/Employee/fullName.js?footer=minimal"></script>
           </div>
   				<div id="step6-age">
-            <script src="http://gist-it.appspot.com/github/AMorgaut/NG-Wakanda-Pack/blob/master/NG-Wakanda-Pack//Modules/Model/Employee/age.js?footer=minimal"></script>
+            <script src="http://gist-it.appspot.com/github/Wakanda/NG-Wakanda-Pack/blob/master/NG-Wakanda-Pack//Modules/Model/Employee/age.js?footer=minimal"></script>
           </div>
         </div>
       </td>
@@ -242,7 +239,7 @@
     <table><tbody><tr>
       <td>
         <h2>7 - Enjoy some Demos</h2>
-        <p>Enjoy the more advanced demos and get help from <a href="https://github.com/AMorgaut/NG-Wakanda-Pack/blob/master/API-DOC.md">the documentation</a> when necessary</p>
+        <p>Enjoy the more advanced demos and get help from <a href="https://github.com/Wakanda/NG-Wakanda-Pack/blob/master/API-DOC.md">the documentation</a> when necessary</p>
       </td>
       <td>
         <div class="tabs">
